// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValidUntil /> should render 'N/A' 1`] = `
<span>
  N/A
</span>
`;

exports[`<ValidUntil /> should render 'a day ago' 1`] = `
<span
  title="2018-11-25 16:11:09"
>
  a day ago
</span>
`;

exports[`<ValidUntil /> should render 'any time now' 1`] = `
<span
  title="2018-11-29 16:11:09"
>
  any time now
</span>
`;
